[package]
name = "tracing-rec"
version = "0.0.0"
license = "MIT"
edition = "2021"
authors = ["Hayden Stainsby <hds@caffeineconcepts.com>"]
readme = "README.md"
homepage = "https://github.com/hds/tracing-rec-replay/tree/main/tracing-rec"
repository = "https://github.com/hds/tracing-rec-replay"
description = """
Record traces to replay later!. All that's missing is rewind.
"""
categories = ["development-tools::debugging"]
keywords = ["tracing", "debugging"]

[dependencies]
