[package]
name = "tracing-replay"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
tracing-core = "0.1"
tracing-subscriber = "0.3"
tracing = "0.1"

[dev-dependencies]
tempfile = "3.10"
